add ingredients on favorite and weekly plan meal details fragment

--- a/app/src/main/res/layout/fragment_weekly_plan_meal_details.xml
+++ b/app/src/main/res/layout/fragment_weekly_plan_meal_details.xml
@@ -104,26 +104,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_marginBottom="8dp">
-
             <TextView
-                android:id="@+id/txtTitleMealTags"
+                android:id="@+id/igredientTitletxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tags:"
+                android:text="@string/ingredients"
+                android:textColor="@color/green"
                 android:textSize="23dp"
-                android:textStyle="bold"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/txtMealTagsPlan"
+                android:textStyle="bold" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/planingrediantsRecycler"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
+                android:layout_marginLeft="15dp"
+                />
+
+
         </LinearLayout>
 
         <!-- Meal Instructions Section -->
