navigate search fragment

--- a/app/src/main/res/navigation/home_activity_nav.xml
+++ b/app/src/main/res/navigation/home_activity_nav.xml
@@ -44,7 +44,9 @@
         android:name="com.example.androidproject.view.search.SearchFragment"
         android:label="@string/search"
         tools:layout="@layout/fragment_search" >
-
+        <action
+            android:id="@+id/action_searchFragment_to_mealDetails"
+            app:destination="@id/mealDetails" />
     </fragment>
     <fragment
         android:id="@+id/logOutFragment"
