--- a/app/src/main/res/layout/fragment_search_card.xml
+++ b/app/src/main/res/layout/fragment_search_card.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".SearchCardFragment">
 
@@ -14,6 +14,7 @@
         android:clickable="true"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <LinearLayout
