--- a/app/src/main/res/layout/fragment_search_card.xml
+++ b/app/src/main/res/layout/fragment_search_card.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/lightGray"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".SearchCardFragment">
 
