add listener to home and category fragments

--- a/app/src/main/res/drawable/remove.xml
+++ b/app/src/main/res/drawable/remove.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="960">
   <path
       android:pathData="M200,520v-80h560v80L200,520Z"
-      android:fillColor="#5985E1"/>
+      android:fillColor="@color/red"/>
 </vector>
