--- a/app/src/main/res/layout/fragment_ingrediants.xml
+++ b/app/src/main/res/layout/fragment_ingrediants.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".IngrediantsFragment"
+    tools:context=".view.ingrediants.IngrediantsFragment"
     android:layout_marginLeft="15dp"
     android:layout_marginTop="10dp"
     android:layout_width="match_parent"
