--- a/app/src/main/res/layout/fragment_search_card.xml
+++ b/app/src/main/res/layout/fragment_search_card.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@color/lightGray"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".SearchCardFragment">
+    tools:context=".view.search.SearchCardFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/SearchCard"
