--- a/app/src/main/res/navigation/home_activity_nav.xml
+++ b/app/src/main/res/navigation/home_activity_nav.xml
@@ -48,6 +48,9 @@
             app:destination="@id/favMealDetailsFragment"
             app:enterAnim="@android:anim/slide_in_left"
             app:exitAnim="@android:anim/slide_out_right" />
+        <action
+            android:id="@+id/action_favoriteFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
