--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -58,11 +58,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
-            android:hint="User Name"
-            android:textColor="@android:color/black"
             android:background="@android:color/transparent"
+            android:hint="@string/UserName"
             android:padding="8dp"
-            />
+            android:textColor="@android:color/black" />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/linearPass"
@@ -91,11 +90,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
-            android:hint="Password"
-            android:textColor="@android:color/black"
             android:background="@android:color/transparent"
+            android:hint="@string/password"
+            android:inputType="textPassword"
             android:padding="8dp"
-            android:inputType="textPassword"/>
+            android:textColor="@android:color/black" />
     </LinearLayout>
 
     <Button
@@ -133,6 +132,17 @@
         android:layout_marginTop="20dp"
 
 
+        />
+    <ProgressBar
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/signupOptiontxt"
+        app:layout_constraintStart_toStartOf="@id/signupOptiontxt"
+        app:layout_constraintEnd_toEndOf="@id/signuptxt"
+        android:layout_marginTop="30dp"
+        android:outlineAmbientShadowColor="@color/green"
+        android:background="@color/green"
+        android:outlineSpotShadowColor="@color/green"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
